--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,6 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>26.0-jre</version>
-    </dependency>
-    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
@@ -36,6 +31,7 @@
         <executions>
           <execution>
             <id>analyze</id>
+            <phase>validate</phase>
             <goals>
               <goal>analyze-only</goal>
             </goals>
