--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>5.6.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.libphonenumber</groupId>
+      <artifactId>libphonenumber</artifactId>
+      <version>8.12.6</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
