--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>libphonenumber</artifactId>
       <version>8.12.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.iban4j</groupId>
+      <artifactId>iban4j</artifactId>
+      <version>3.2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
